# TBM

./: .gitignore  AccountManager1.src  CMakeLists.txt  Dockerfile  README.md
headers/: APIread.h  AbstractStrategy.h  AccountManager.h  AnalysisHandler.h  BinanceAPI.h  BinanceWebsocket.h  DataBase.h  DataLog.h  ERBB.h  MACDST.h  OrderManager.h  common.hpp  e_r_bb.h  strategy.h
headers/INDICATORS/: AbstractStrategy.h  BBIndicator.h  EMAIndicator.h  ICHIMOKUIndicator.h  MACDIndicator.h  MAIndicator.h  OBVIndicator.h  RSIIndicator.h  Supertrend.h
src/: APIread.cpp  AbstractStrategy.cpp  AccountManager.cpp  AnalysisHandler.cpp  BinanceAPI.cpp  BinanceWebsocket.cpp  DataBase.cpp  ERBB.cpp  MACDST.cpp  OrderManager.cpp  e_r_bb.cpp  main.cpp  main1.cpp  strategy.cpp
src/INDICATORS/: BBIndicator.cpp  EMAIndicator.cpp  ICHIMOKUIndicator.cpp  MACDIndicator.cpp  MAIndicator.cpp  OBVIndicator.cpp  RSIIndicator.cpp  Supertrend.cpp
utils/: .env  Dockerfile  market_data.csv
